add images + css + js

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mental Health Information</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/images/light-mode.svg" type="image/x-icon" />
+    <link rel="icon" href="images/light-mode.svg" type="image/x-icon" />
   </head>
 
   <body>
@@ -27,7 +27,7 @@
             aria-controls="primary-navigation"
             aria-expanded="false"
           >
-            <img src="assets/images/menu.svg" alt="navigation button" />
+            <img src="images/menu.svg" />
           </button>
           <nav id="primary-navigation" data-visible="false">
             <ul role="presentation">
@@ -61,7 +61,7 @@
               aria-controls="primary-navigation"
               aria-label="Close navigation"
             >
-              <img src="/assets/images/close.svg" alt="Close button" />
+              <img src="images/close.svg" alt="Close button" />
             </button>
           </nav>
         </div>
@@ -83,58 +83,202 @@
             <div class="card-container">
               <article class="card large-card small-card">
                 <img
-                  src="assets/images/person-by-water.jpg"
+                  src="images/person-by-water.jpg"
                   alt="Person sitting by the water"
                   class="card--img"
                 />
                 <h3 class="card--heading">Recognising Anxiety</h3>
                 <p>
                   Anxiety can feel like a constant state of worry, even about
+                  everyday things. It might show up as a racing heart, trouble
+                  concentrating, or feeling restless. You may notice physical
+                  symptoms like sweating, tense muscles, or a feeling of dread.
+                  It's okay to feel worried sometimes, but if these feelings
+                  persist, it might be time to explore some helpful strategies.
                 </p>
+                <ul class="card--list">
+                  <li class="card--list-item">
+                    <strong>Practice Deep Breathing:</strong><br />
+                    When you feel anxious, try deep breathing exercises. Breathe
+                    in slowly for 4 counts, hold for 4 counts, and breathe out
+                    for 4 counts. This can help calm your mind and body.
+                  </li>
+                  <li class="card--list-item">
+                    <strong>Grounding Techniques:</strong><br />
+                    Use the 5-4-3-2-1 technique to ground yourself. Focus on 5
+                    things you can see, 4 things you can touch, 3 things you can
+                    hear, 2 things you can smell, and 1 thing you can taste. It
+                    helps bring you back to the present moment.
+                  </li>
+                  <li class="card--list-item">
+                    <strong>Limit Caffeine and Sugar:</strong><br />
+                    Stimulants like caffeine can increase feelings of anxiety.
+                    Try swapping coffee for herbal tea or a glass of water,
+                    especially when you’re feeling on edge.
+                  </li>
+                  <li class="card--list-item">
+                    <strong>Set a Worry Time:</strong><br />
+                    Give yourself permission to worry—but set a time for it. For
+                    example, allow yourself 15 minutes each day to jot down
+                    worries, then put them away. This helps prevent them from
+                    taking over your whole day.
+                  </li>
+                </ul>
+                <button
+                  aria-label="click to expand card and read tips on managing this condition"
+                  class="link-text card--button"
+                >
+                  Explore tips
+                </button>
               </article>
             </div>
-            <div class="card-container">
-              <article class="card large-card small-card">
-                <img
-                  src="assets/images/another-image.jpg"
-                  alt="Another description"
-                  class="card--img"
-                />
-                <h3 class="card--heading">Understanding Depression</h3>
-                <p>
-                  Depression goes beyond feeling sad—it's a persistent sense of
-                  hopelessness that can drain your energy and make it hard to
-                  enjoy things you once loved.
-                </p>
-              </article>
+
+            <div class="card small-card">
+              <img
+                src="images/clasped-hands.jpg"
+                alt="clasped hands"
+                class="card--img"
+              />
+              <h3 class="card--heading">Understanding Depression</h3>
+              <p>
+                Depression goes beyond feeling sad—it's a persistent sense of
+                hopelessness that can drain your energy and make it hard to
+                enjoy things you once loved. Signs include losing interest in
+                activities, changes in sleep patterns, and feeling tired all the
+                time. It’s normal to feel down occasionally, but if these
+                feelings last for weeks, you’re not alone, and help is
+                available.
+              </p>
+
+              <ul class="card--list">
+                <li class="card--list-item">
+                  <strong>Break Tasks Into Small Steps:</strong><br />
+                  Depression can make even simple tasks feel overwhelming. Start
+                  with something small, like making your bed or taking a shower.
+                  These small wins can help build momentum.
+                </li>
+                <li class="card--list-item">
+                  <strong>Reach Out to Someone You Trust:</strong><br />
+                  Isolation can make depression feel heavier. Try reaching out
+                  to a friend or family member, even if it's just for a short
+                  chat. Connection can make a big difference.
+                </li>
+                <li class="card--list-item">
+                  <strong>Engage in Physical Activity:</strong><br />
+                  Physical activity, even a short walk around the block, can
+                  help release endorphins that improve mood. Start with 5-10
+                  minutes a day and build from there.
+                </li>
+                <li class="card--list-item">
+                  <strong>Practice Self-Compassion:</strong><br />
+                  Remind yourself that it’s okay to not be okay. Being kind to
+                  yourself and recognizing that it’s not your fault can be a
+                  small but significant way to ease the burden.
+                </li>
+              </ul>
+              <button
+                aria-label="click to expand card and read tips on managing this condition"
+                class="link-text card--button"
+              >
+                Explore tips
+              </button>
             </div>
-            <div class="card-container">
-              <article class="card large-card small-card">
-                <img
-                  src="assets/images/yet-another-image.jpg"
-                  alt="Yet another description"
-                  class="card--img"
-                />
-                <h3 class="card--heading">Managing Stress</h3>
-                <p>
-                  Stress is a natural response to challenging situations, but
-                  chronic stress can have serious health implications.
-                </p>
-              </article>
+            <div class="card small-card">
+              <img src="images/poppies.jpg" alt="" class="card--img" />
+              <h3 class="card--heading">Spotting Burnout</h3>
+              <p>
+                Burnout often comes from feeling overwhelmed at work, school, or
+                even in daily life. It might look like feeling constantly
+                exhausted, becoming irritable, or struggling to focus. You may
+                feel detached from what used to matter to you, or like you're
+                running on empty. Recognizing these signs is the first step to
+                taking a well-deserved break and recharging.
+              </p>
+              <ul class="card--list">
+                <li class="card--list-item">
+                  <strong>Set Clear Boundaries:</strong><br />
+                  It’s okay to say “no” when you need to. Setting boundaries at
+                  work or in personal life can help protect your time and
+                  energy. Practice saying no without feeling guilty—your
+                  well-being comes first.
+                </li>
+                <li class="card--list-item">
+                  <strong>Take Regular Breaks:</strong><br />
+                  Use the Pomodoro technique: work for 25 minutes, then take a
+                  5-minute break. This can keep you from feeling overwhelmed and
+                  give your mind a chance to rest.
+                </li>
+                <li class="card--list-item">
+                  <strong>Reconnect with Activities You Enjoy:</strong><br />
+                  Burnout often makes us lose sight of what we love. Try to
+                  reintroduce hobbies, even if just for 10 minutes a day. It can
+                  help bring back a sense of enjoyment and purpose.
+                </li>
+                <li class="card--list-item">
+                  <strong>Prioritize Sleep:</strong><br />
+                  Rest is essential for recovery. Establish a wind-down routine
+                  before bed—like reading or listening to calming music—to
+                  improve your sleep quality and recharge for the next day.
+                </li>
+              </ul>
+              <button
+                aria-label="click to expand card and read tips on managing this condition"
+                class="link-text card--button"
+              >
+                Explore tips
+              </button>
             </div>
-            <div class="card-container">
-              <article class="card large-card small-card">
-                <img
-                  src="assets/images/fourth-image.jpg"
-                  alt="Fourth description"
-                  class="card--img"
-                />
-                <h3 class="card--heading">Coping with Grief</h3>
-                <p>
-                  Grief is a natural response to loss, but it can be
-                  overwhelming and affect your daily life.
-                </p>
-              </article>
+
+            <div class="card small-card">
+              <img
+                src="images/woman-watchin-sea.jpg"
+                alt=""
+                class="card--img"
+              />
+              <h3 class="card--heading">Signs of Chronic Stress</h3>
+              <p>
+                Stress is a normal part of life, but when it becomes chronic, it
+                can impact your body and mind in lasting ways. Symptoms might
+                include headaches, muscle tension, difficulty sleeping, or
+                feeling overwhelmed by everyday tasks. Recognizing when stress
+                has become a constant companion can help you take steps toward
+                managing it more effectively.
+              </p>
+              <ul class="card--list">
+                <li class="card--list-item">
+                  <strong>Practice Mindfulness:</strong><br />
+                  Mindfulness exercises, like focusing on your breath or
+                  listening to a guided meditation, can help reduce the impact
+                  of stress. Even just a few minutes can make a difference.
+                </li>
+                <li class="card--list-item">
+                  <strong>Organize and Prioritize Tasks:</strong><br />
+                  When you’re stressed, even small tasks can feel daunting. Try
+                  writing down a list and tackling one task at a time. Start
+                  with the most important, and don’t be afraid to break bigger
+                  tasks into smaller steps.
+                </li>
+                <li class="card--list-item">
+                  <strong>Spend Time in Nature:</strong><br />
+                  Being outside, whether it’s in a park, garden, or even on a
+                  balcony, can help reduce stress levels. Take a moment to
+                  notice the sights, sounds, and smells around you—it’s a simple
+                  way to refresh your mind.
+                </li>
+                <li class="card--list-item">
+                  <strong>Limit Exposure to Stress Triggers:</strong><br />
+                  If possible, identify what triggers your stress and try to
+                  minimize exposure to it. For example, if news or social media
+                  overwhelm you, consider taking a break or limiting your time
+                  on those platforms.
+                </li>
+              </ul>
+              <button
+                aria-label="click to expand card and read tips on managing this condition"
+                class="link-text card--button"
+              >
+                Explore tips
+              </button>
             </div>
           </div>
         </div>
@@ -360,8 +504,8 @@
         </div>
       </section>
     </main>
-    <script src="assets/javascript/index.js"></script>
-    <script src="assets/javascript/cards.js"></script>
-    <script src="assets/javascript/carousel.js"></script>
+    <script src="javascript/index.js"></script>
+    <script src="javascript/cards.js"></script>
+    <script src="javascript/carousel.js"></script>
   </body>
 </html>
